--- a/.env
+++ b/.env
@@ -3,12 +3,12 @@ LOGS=1111592248510009394
 MONGO_URI=mongodb+srv://admin:123@discord-lykhost.2utsods.mongodb.net/?retryWrites=true&w=majority
 NODE_AUTH=24
 NODE_NAME=LykHost-Private
-NODE_SECURE=false
-NODE_URL=157.90.181.156:8253
+NODE_SECURE=true
+NODE_URL=port-0-lavalink-f02w2almhtulne.sel5.cloudtype.app
 OWNERID=917069166157119509
 PREFIX=r!
 SPOTIFYID=ab02faffa7794d6389b4d1b22a3d2e40
 SPOTIFYSECRET=2518b17c64c64617997f90127625cb28
-TOKEN=MTE0MDY2MDc2MTE2MTY0NjE3MQ.Gz19ZZ.Y2lifkPC4nZyxrHZulaHL4P1JUbCcD65d0s7nY
+TOKEN=MTE0MDY2MDc2MTE2MTY0NjE3MQ.Gyd8-2.fii_s8OoDxoVGOlLiGekNQ0Ug9u0uYFaLZRqjI
 PLOGS=1140087638464925726
 DLOGS=1140091655744131072
