--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ LOGS=1111592248510009394
 MONGO_URI=mongodb+srv://admin:123@discord-lykhost.2utsods.mongodb.net/?retryWrites=true&w=majority
 NODE_AUTH=24
 NODE_NAME=LykHost-Private
-NODE_SECURE=true
-NODE_URL=port-0-lavalink-f02w2almhtulne.sel5.cloudtype.app
+NODE_SECURE=false
+NODE_URL=103.178.158.190:10247
 OWNERID=917069166157119509
 PREFIX=r!
 SPOTIFYID=ab02faffa7794d6389b4d1b22a3d2e40
