--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ OWNERID=917069166157119509
 PREFIX=r!
 SPOTIFYID=ab02faffa7794d6389b4d1b22a3d2e40
 SPOTIFYSECRET=2518b17c64c64617997f90127625cb28
-TOKEN=MTE0MDY2MDc2MTE2MTY0NjE3MQ.Gyd8-2.fii_s8OoDxoVGOlLiGekNQ0Ug9u0uYFaLZRqjI
+TOKEN=MTE0MjY3NzIzNzEyNTEwNzc1Mg.GK0LKB.gDo6bHqTBoKnMqhkNG8spmdtUQDEl1CmiZSS38
 PLOGS=1140087638464925726
 DLOGS=1140091655744131072
