--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 COlOR=#D8FC00
 LOGS=1111592248510009394
-MONGO_URI=mongodb+srv://admin:123@discord-lykhost.2utsods.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://admin:123@codetest.lhogaqm.mongodb.net/?retryWrites=true&w=majority
 NODE_AUTH=24
 NODE_NAME=LykHost-Private
 NODE_SECURE=false
